Closed
Bug 313327
Opened 19 years ago
Closed 19 years ago
Table elements within or around FORM element break Submit (was: Google Search broken)
Categories
(Core :: DOM: HTML Parser, defect)
Core
DOM: HTML Parser
Tracking
()
VERIFIED
FIXED
mozilla1.9alpha1
People
(Reporter: mcsmurf, Assigned: sicking)
References
Details
(Keywords: regression, testcase)
Attachments
(2 files)
298 bytes,
text/html
|
Details | |
853 bytes,
patch
|
mrbkap
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
To reproduce:
1. Fetch hourly build or make CVS build (as far as i can tell the nightly from
today is still ok!)
2. Search for anything in Google
3. Try to re-submit search on results page via "Search" button (feel free to
change the search term, it should not matter)
Observe nothing happens, also no errors in JS Console here.
confirmed with:
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20051021 Firefox/1.6a1
Reporter | ||
Comment 2•19 years ago
|
||
Ok, it seems i found what causes this bug, will attach a testcase in a second.
Assignee: general → mrbkap
Component: General → HTML: Parser
Product: Mozilla Application Suite → Core
QA Contact: general → parser
Summary: Google Search broken when re-submitting search → Table elements within or around FORM element break Submit (was: Google Search broken)
Reporter | ||
Comment 3•19 years ago
|
||
Enter anything and try to submit, observe nothing happens. If you remove the
"<td></td>" inside the <form> element, submitting works again. You can also
remove the "<table><tr><td>" before the <form> element, then submitting will
also work again.
Comment 4•19 years ago
|
||
Could this be fallout from bug 311785?
Reporter | ||
Comment 5•19 years ago
|
||
Probably if you ask me ;), this regressed between 2005-10-21-08 and 2005-10-21-12.
Reporter | ||
Updated•19 years ago
|
Comment 6•19 years ago
|
||
*** Bug 313332 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 7•19 years ago
|
||
I missed that the old CNavDTD::OpenForm doesn't put the form element on the tag
stack. Which of course it shouldn't since it'll cause us to close out the form
if it's malformed.
Assignee: mrbkap → bugmail
Status: NEW → ASSIGNED
Attachment #200462 -
Flags: superreview?(peterv)
Attachment #200462 -
Flags: review?(mrbkap)
Comment 8•19 years ago
|
||
Comment on attachment 200462 [details] [diff] [review]
Patch to fix
r=mrbkap
Attachment #200462 -
Flags: review?(mrbkap) → review+
Comment 9•19 years ago
|
||
*** Bug 313389 has been marked as a duplicate of this bug. ***
Comment 10•19 years ago
|
||
[Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.9a1) Gecko/20051022 SeaMonkey/1.1a]
(nightly) (W98SE)
(I guess I'm seeing this bug in current SM, but not in _1021 build; on
("private") <www.battle-arenas.net>.)
Updated•19 years ago
|
OS: Windows 2000 → All
Reporter | ||
Comment 11•19 years ago
|
||
*** Bug 313517 has been marked as a duplicate of this bug. ***
Comment 12•19 years ago
|
||
I just made a build with attachment 200462 [details] [diff] [review] included and can confirm that it fixes the problem.
![]() |
||
Comment 13•19 years ago
|
||
Comment on attachment 200462 [details] [diff] [review]
Patch to fix
sr=bzbarsky. Please land this; I want a usable browser! ;)
Attachment #200462 -
Flags: superreview?(peterv) → superreview+
Assignee | ||
Comment 14•19 years ago
|
||
Checked in. Thanks for the great testcase, made fixing this a breeze.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Verified FIXED using SeaMonkey trunk;Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20051024 Mozilla/1.0 from http://ftp.mozilla.org/pub/mozilla.org/seamonkey/tinderbox-builds/CREATURE-trunk/ on Windows XP.
Status: RESOLVED → VERIFIED
Comment 16•19 years ago
|
||
Verified fixed.
Mozilla/5.0 (X11; U; Linux i686; en-GB; rv:1.9a1) Gecko/20051024 Firefox/1.6a1 ID:2005102411
Updated•19 years ago
|
Target Milestone: --- → mozilla1.9alpha
Comment 17•19 years ago
|
||
*** Bug 314872 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•