Bug 313327: Fix regression caused by my last checkin. Don't put forms on the tag stack to avoid closing them prematurly. r=mrbkap sr=bz